newtype-tools/tests/trybuild/newtype-name-value.stderr
error: expected `#[newtype(attr1, attr2)]`
 --> tests/trybuild/newtype-name-value.rs:2:3
  |
2 | #[newtype = value]
  |   ^^^^^^^^^^^^^^^

error: attribute value must be a literal
 --> tests/trybuild/newtype-name-value.rs:2:13
  |
2 | #[newtype = value]
  |             ^^^^^
